@@ -501,5 +501,7 @@
   - bugfix:  sunrise stuff fixed, doc missing
   - feature: CUL FHT sending added
   - bugfix:  workaround to make M232 counter wraparound
+  - feature: sequence module added
   - feature: Google Weather API support form FHEM (Boris 2009-06-01)
   - feature: lazy attribute for FHT devices (Boris 2009-06-09)
+  - feature: tmpcorr attribute for FHT devices
